--- a/ve_recalculate.ipynb
+++ b/ve_recalculate.ipynb
@@ -408,7 +408,7 @@
     "ve_difference = paper_vaccine_efficacy-RW_vaccine_efficacy\n",
     "ve_index = np.argsort(ve_difference)\n",
     "\n",
-    "data = {'ve_difference': ve_difference, 'rw_ve': RW_vaccine_efficacy, 'paper_ve_methods': paper_ve_methods, 'paper_ci_methods': paper_ci_methods}\n",
+    "data = {'ve_difference': ve_difference, 'rw_ve': RW_vaccine_efficacy, 'paper_ve_methods': paper_ve_methods, 'paper_ci_methods': paper_ci_methods, 'reference': references}\n",
     "df = pd.DataFrame(data)\n",
     "print(df[abs(df['ve_difference']) > 3])\n"
    ]
@@ -442,7 +442,7 @@
     "    RW_vaccine_efficacy = RW_vaccine_efficacy[remove_map]\n",
     "    \n",
     "    # Efficacy\n",
-    "    fig = plt.figure(figsize=(8, 6))\n",
+    "    fig = plt.figure(figsize=(8, 5))\n",
     "    unique_paper_ve_methods = np.unique(paper_ve_methods)\n",
     "    efficacy_difference_dict = {}\n",
     "    for i, paper_ve_method in enumerate(unique_paper_ve_methods):\n",
@@ -455,11 +455,11 @@
     "    labels, data = [*zip(*efficacy_difference_dict.items())]  # 'transpose' items to parallel key, value lists\n",
     "    sns.violinplot(data, inner=None, cut=0, palette=palette)\n",
     "    sns.swarmplot(data=data, color='black', alpha=0.5, size=4)\n",
-    "    plt.fill_betweenx(y=[-6, 7], x1=-0.5, x2=2.5, color='gray', alpha=0.2)\n",
+    "    plt.fill_betweenx(y=[-4.1, 6.1], x1=-0.5, x2=2.5, color='gray', alpha=0.2)\n",
     "    plt.xlim(-0.5, 4.5)\n",
-    "    plt.ylim([-6, 7])\n",
+    "    plt.ylim([-4.1, 6.1])\n",
     "    plt.xticks(range(0, len(labels)), labels)\n",
-    "    plt.xticks(rotation = 30, ha='right')\n",
+    "    plt.xticks(rotation = 15, ha='right')\n",
     "    plt.grid()\n",
     "    plt.ylabel('Difference between original vaccine efficacy and \\n vaccine efficacy estimated by relative risk (%)')\n",
     "    if save_fig == True:\n",
@@ -535,7 +535,7 @@
     "    RW_upper_bound_tmp = RW_upper_bound[remove_map]\n",
     "\n",
     "    # Lower\n",
-    "    fig1 = plt.figure(figsize=(10, 6))\n",
+    "    fig1 = plt.figure(figsize=(10, 5))\n",
     "    paper_lower_lengths = paper_vaccine_efficacy_tmp - paper_lower_bound_tmp\n",
     "    RW_lower_lengths = RW_vaccine_efficacy_tmp - RW_lower_bound_tmp\n",
     "    unique_paper_ci_methods = np.unique(paper_ci_methods_tmp)\n",
@@ -625,7 +625,7 @@
     "    RW_upper_bound_tmp = RW_upper_bound[remove_map]\n",
     "\n",
     "    # upper\n",
-    "    fig1 = plt.figure(figsize=(10, 6))\n",
+    "    fig1 = plt.figure(figsize=(10, 5))\n",
     "    paper_upper_lengths = paper_vaccine_efficacy_tmp - paper_upper_bound_tmp\n",
     "    RW_upper_lengths = RW_vaccine_efficacy_tmp - RW_upper_bound_tmp\n",
     "    unique_paper_ci_methods = np.unique(paper_ci_methods_tmp)\n",
