add mean marker in violin

--- a/ve_recalculate.ipynb
+++ b/ve_recalculate.ipynb
@@ -295,8 +295,7 @@
    "outputs": [],
    "source": [
     "distance_between_VE_to_threshold(paper_vaccine_efficacy, paper_ve_methods,\n",
-    "                                     RW_vaccine_efficacy, save_fig=False)\n",
-    "\n"
+    "                                     RW_vaccine_efficacy, save_fig=False)\n"
    ]
   },
   {
