generate tables and funnel plots

--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,16 +75,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "from tabulate import tabulate  # For nice table formatting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_latex_tables(df):\n",
+    "    # Get unique values\n",
+    "    unique_aves = sorted(df['ave'].unique())\n",
+    "    unique_vaccines = sorted(df['vaccine'].unique())\n",
+    "    unique_variants = sorted(df['variant'].unique())\n",
+    "    \n",
+    "    # Create LaTeX tables for each ave type\n",
+    "    latex_tables = []\n",
+    "    \n",
+    "    for ave_type in unique_aves:\n",
+    "        # Create pivot table for data and transpose it\n",
+    "        pivot_data = pd.pivot_table(\n",
+    "            df[df['ave'] == ave_type],\n",
+    "            values='unnamed:_0',\n",
+    "            index='vaccine',\n",
+    "            columns='variant',\n",
+    "            aggfunc='size',\n",
+    "            fill_value=0\n",
+    "        )\n",
+    "\n",
+    "        # Filter out variants with no data\n",
+    "        variants_with_data = [var for var in unique_variants \n",
+    "                            if var in pivot_data.columns and pivot_data[var].sum() > 0]\n",
+    "        \n",
+    "        # Start LaTeX table\n",
+    "        latex_table = [\n",
+    "            \"\\\\begin{table}[h]\",\n",
+    "            \"\\\\centering\",\n",
+    "            f\"\\\\caption{{data counts for {ave_type.lower()} endpoint.}}\",\n",
+    "            \"\\\\begin{tabular}{l\" + \"c\" * (len(variants_with_data) + 1) + \"}\",  # +1 for Total column\n",
+    "            \"\\\\hline\",\n",
+    "            \"Vaccine & \" + \" & \".join(variants_with_data) + \" & Total \\\\\\\\\",\n",
+    "            \"\\\\hline\"\n",
+    "        ]\n",
+    "        \n",
+    "        # Add data rows with row totals\n",
+    "        row_has_data = False\n",
+    "        for vaccine in unique_vaccines:\n",
+    "            if vaccine in pivot_data.index:\n",
+    "                row_values = [str(int(pivot_data.loc[vaccine, variant])) if variant in pivot_data.columns else '0' \n",
+    "                            for variant in variants_with_data]\n",
+    "                row_total = sum(int(x) for x in row_values)\n",
+    "                if row_total > 0:  # Only include rows with non-zero data\n",
+    "                    row_has_data = True\n",
+    "                    latex_table.append(f\"{vaccine} & \" + \" & \".join(row_values) + f\" & {row_total} \\\\\\\\\")\n",
+    "        \n",
+    "        # Add column totals row\n",
+    "        if row_has_data:\n",
+    "            col_totals = []\n",
+    "            for variant in variants_with_data:\n",
+    "                if variant in pivot_data.columns:\n",
+    "                    col_totals.append(str(int(pivot_data[variant].sum())))\n",
+    "                else:\n",
+    "                    col_totals.append('0')\n",
+    "            grand_total = sum(int(x) for x in col_totals)\n",
+    "            latex_table.append(\"\\\\hline\")\n",
+    "            latex_table.append(\"Total & \" + \" & \".join(col_totals) + f\" & {grand_total} \\\\\\\\\")\n",
+    "        \n",
+    "        # Close table\n",
+    "        latex_table.extend([\n",
+    "            \"\\\\hline\",\n",
+    "            \"\\\\end{tabular}\",\n",
+    "            \"\\\\label{tab:\" + ave_type.lower().replace(\" \", \"_\") + \"}\",\n",
+    "            \"\\\\end{table}\",\n",
+    "            \"\\n\"  # Add blank line between tables\n",
+    "        ])\n",
+    "        \n",
+    "        # Join all lines and add to collection\n",
+    "        latex_tables.append('\\n'.join(latex_table))\n",
+    "    \n",
+    "    return latex_tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latex_tables = create_latex_tables(df)\n",
+    "for i, table in enumerate(latex_tables):\n",
+    "    with open(f'table_{i+1}.txt', 'w') as f:\n",
+    "        f.write(table)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Meta analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,14 +297,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import PythonMeta as PMA\n",
-    "\n",
     "def prepare_data_for_pythonmeta(excel_file, ave, variant='SARS-CoV-2'):\n",
     "    # Read the Excel file\n",
     "    df = pd.read_excel(excel_file)\n",
@@ -229,21 +324,17 @@
     "            study_string = f\"{row['reference']}, {int(row['no_of_infected_in_vaccine_group'])}, {int(row['no_of_participants_in_vaccine_group'])}, {int(row['no_of_infected_in_placebo_group'])}, {int(row['no_of_participants_in_placebo_groupcontrol_group'])}\"\n",
     "            study_strings.append(study_string)\n",
     "    \n",
-    "    return study_strings\n",
-    "\n",
-    "# Prepare the data\n",
-    "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave='Symptomatic')\n",
-    "\n",
-    "# Set up the analysis settings\n",
-    "settings = {\n",
-    "    \"datatype\": \"CATE\",  # for CATEgorical/binary data\n",
-    "    \"models\": \"Random\",  # Random effects model\n",
-    "    \"algorithm\": \"MH\",   # Mantel-Haenszel method\n",
-    "    \"effect\": \"RR\"      # Risk Ratio as effect measure\n",
-    "}\n",
-    "\n",
+    "    return study_strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Run the meta-analysis\n",
-    "def run_meta_analysis(study_data, settings):\n",
+    "def run_meta_analysis(study_data, settings, ave, save_fig=False):\n",
     "    d = PMA.Data()  # Load Data class\n",
     "    m = PMA.Meta()  # Load Meta class\n",
     "    f = PMA.Fig()   # Load Fig class\n",
@@ -272,13 +363,258 @@
     "    # Generate plots\n",
     "    f.forest(results).show()\n",
     "    f.funnel(results).show()\n",
+    "\n",
+    "    if save_fig:\n",
+    "        f.funnel(results).savefig(f'RW2025_funnel_{settings[\"models\"]}_{ave}.pdf', bbox_inches='tight')\n",
     "    \n",
     "    # Perform Egger's test\n",
     "    print(\"\\nEgger's test results:\")\n",
-    "    print(m.Eggers_test(results))\n",
+    "    print(m.Eggers_test(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Symptomatic + random effects\n",
+    "\n",
+    "# Prepare the data\n",
+    "ave = 'Symptomatic'\n",
+    "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave=ave)\n",
+    "\n",
+    "# Set up the analysis settings\n",
+    "settings = {\n",
+    "    \"datatype\": \"CATE\",  # for CATEgorical/binary data\n",
+    "    \"models\": \"Random\",  # Random effects model\n",
+    "    \"algorithm\": \"MH\",   # Mantel-Haenszel method\n",
+    "    \"effect\": \"RR\"      # Risk Ratio as effect measure\n",
+    "}\n",
     "\n",
     "# Run the analysis\n",
-    "run_meta_analysis(study_data, settings)"
+    "results = run_meta_analysis(study_data, settings, ave=ave, save_fig=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Symptomatic + fixed effect\n",
+    "\n",
+    "# Prepare the data\n",
+    "ave = 'Symptomatic'\n",
+    "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave=ave)\n",
+    "\n",
+    "# Set up the analysis settings\n",
+    "settings = {\n",
+    "    \"datatype\": \"CATE\",  # for CATEgorical/binary data\n",
+    "    \"models\": \"Fixed\",  # Random effects model\n",
+    "    \"algorithm\": \"MH\",   # Mantel-Haenszel method\n",
+    "    \"effect\": \"RR\"      # Risk Ratio as effect measure\n",
+    "}\n",
+    "\n",
+    "# Run the analysis\n",
+    "run_meta_analysis(study_data, settings, ave=ave, save_fig=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Severe + Random effects\n",
+    "\n",
+    "# Prepare the data\n",
+    "ave = 'Severe'\n",
+    "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave=ave)\n",
+    "\n",
+    "# Set up the analysis settings\n",
+    "settings = {\n",
+    "    \"datatype\": \"CATE\",  # for CATEgorical/binary data\n",
+    "    \"models\": \"Random\",  # Random effects model\n",
+    "    \"algorithm\": \"MH\",   # Mantel-Haenszel method\n",
+    "    \"effect\": \"RR\"      # Risk Ratio as effect measure\n",
+    "}\n",
+    "\n",
+    "# Run the analysis\n",
+    "run_meta_analysis(study_data, settings, ave=ave, save_fig=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Severe + fixed effect\n",
+    "\n",
+    "# Prepare the data\n",
+    "ave = 'Severe'\n",
+    "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave=ave)\n",
+    "\n",
+    "# Set up the analysis settings\n",
+    "settings = {\n",
+    "    \"datatype\": \"CATE\",  # for CATEgorical/binary data\n",
+    "    \"models\": \"Fixed\",  # Random effects model\n",
+    "    \"algorithm\": \"MH\",   # Mantel-Haenszel method\n",
+    "    \"effect\": \"RR\"      # Risk Ratio as effect measure\n",
+    "}\n",
+    "\n",
+    "# Run the analysis\n",
+    "run_meta_analysis(study_data, settings, ave=ave, save_fig=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_combined_meta_analysis_table(meta_results_fixed, meta_results_random, ave_type):\n",
+    "    \"\"\"\n",
+    "    Creates a LaTeX table combining fixed and random effects meta-analysis results.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    meta_results_fixed (list): Results from fixed effects meta-analysis\n",
+    "    meta_results_random (list): Results from random effects meta-analysis\n",
+    "    ave_type (str): Type of endpoint (e.g., 'Symptomatic', 'Severe')\n",
+    "    \n",
+    "    Returns:\n",
+    "    str: LaTeX formatted table\n",
+    "    \"\"\"\n",
+    "    # Start LaTeX table\n",
+    "    latex_lines = [\n",
+    "        \"\\\\begin{table}[htbp]\",\n",
+    "        \"\\\\centering\",\n",
+    "        f\"\\\\caption{{Meta-analysis results for {ave_type.lower()} endpoint}}\",\n",
+    "        \"\\\\begin{tabular}{lccc}\",\n",
+    "        \"\\\\hline\",\n",
+    "        \"Author year & RR (95\\\\%CI) & FE & RE \\\\\\\\\",\n",
+    "        \"\\\\hline\"\n",
+    "    ]\n",
+    "    \n",
+    "    # Process each study's results\n",
+    "    # Skip first row as it contains summary statistics\n",
+    "    for i in range(1, len(meta_results_fixed)):\n",
+    "        study_id = meta_results_fixed[i][0]\n",
+    "        \n",
+    "        # Calculate CI string\n",
+    "        rr = meta_results_fixed[i][1]\n",
+    "        ci_lower = meta_results_fixed[i][3]\n",
+    "        ci_upper = meta_results_fixed[i][4]\n",
+    "        ci_str = f\"{rr:.2f}({ci_lower:.2f}--{ci_upper:.2f})\"\n",
+    "        \n",
+    "        # Calculate weights\n",
+    "        fe_weight = 100 * (meta_results_fixed[i][2] / meta_results_fixed[0][2])\n",
+    "        re_weight = 100 * (meta_results_random[i][2] / meta_results_random[0][2])\n",
+    "        \n",
+    "        # Add row to table\n",
+    "        latex_lines.append(\n",
+    "            f\"{study_id} & {ci_str} & {fe_weight:.2f} & {re_weight:.2f} \\\\\\\\\"\n",
+    "        )\n",
+    "    \n",
+    "    # Add summary statistics\n",
+    "    latex_lines.extend([\n",
+    "        \"\\\\hline\",\n",
+    "        \"Total & & Fix & Rand \\\\\\\\\",\n",
+    "        f\"Random & {meta_results_random[0][1]:.2f}({meta_results_random[0][3]:.2f}--{meta_results_random[0][4]:.2f}) & & \\\\\\\\\",\n",
+    "        f\"Fixed & {meta_results_fixed[0][1]:.2f}({meta_results_fixed[0][3]:.2f}--{meta_results_fixed[0][4]:.2f}) & & \\\\\\\\\",\n",
+    "        f\"Tau$^2$ & {meta_results_random[0][12]:.3f} & & \\\\\\\\\",\n",
+    "        f\"I$^2$ & {meta_results_random[0][9]:.2f} & & \\\\\\\\\",\n",
+    "        f\"Q & {meta_results_random[0][7]:.2f} & & \\\\\\\\\",\n",
+    "        f\"P & {meta_results_random[0][8]} & & \\\\\\\\\",\n",
+    "        f\"Z & {meta_results_random[0][10]:.2f}--{meta_results_fixed[0][10]:.2f} & & \\\\\\\\\",\n",
+    "        \"\\\\hline\",\n",
+    "        \"\\\\end{tabular}\",\n",
+    "        \"\\\\label{tab:meta_\" + ave_type.lower() + \"}\",\n",
+    "        \"\\\\end{table}\"\n",
+    "    ])\n",
+    "    \n",
+    "    return \"\\n\".join(latex_lines)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_combined_meta_analysis(excel_file, ave, save_file=False):\n",
+    "    \"\"\"\n",
+    "    Runs both fixed and random effects meta-analyses and generates a combined LaTeX table.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    excel_file (str): Path to the Excel file containing the data\n",
+    "    ave (str): Type of endpoint to analyze\n",
+    "    \n",
+    "    Returns:\n",
+    "    str: LaTeX formatted table\n",
+    "    \"\"\"\n",
+    "    # Prepare the data\n",
+    "    study_data = prepare_data_for_pythonmeta(excel_file, ave=ave)\n",
+    "    \n",
+    "    # Set up the base settings\n",
+    "    base_settings = {\n",
+    "        \"datatype\": \"CATE\",\n",
+    "        \"algorithm\": \"MH\",\n",
+    "        \"effect\": \"RR\"\n",
+    "    }\n",
+    "    \n",
+    "    # Create settings for both models\n",
+    "    settings_fixed = {**base_settings, \"models\": \"Fixed\"}\n",
+    "    settings_random = {**base_settings, \"models\": \"Random\"}\n",
+    "    \n",
+    "    # Initialize PythonMeta classes\n",
+    "    d = PMA.Data()\n",
+    "    m = PMA.Meta()\n",
+    "    \n",
+    "    # Set data type\n",
+    "    d.datatype = base_settings[\"datatype\"]\n",
+    "    \n",
+    "    # Load data\n",
+    "    studies = d.getdata(study_data)\n",
+    "    \n",
+    "    # Run fixed effects analysis\n",
+    "    m.datatype = d.datatype\n",
+    "    m.models = settings_fixed[\"models\"]\n",
+    "    m.algorithm = settings_fixed[\"algorithm\"]\n",
+    "    m.effect = settings_fixed[\"effect\"]\n",
+    "    results_fixed = m.meta(studies)\n",
+    "    \n",
+    "    # Run random effects analysis\n",
+    "    m.models = settings_random[\"models\"]\n",
+    "    results_random = m.meta(studies)\n",
+    "    \n",
+    "    # Generate combined table\n",
+    "    latex_table = create_combined_meta_analysis_table(results_fixed, results_random, ave)\n",
+    "\n",
+    "    if save_file:\n",
+    "        with open(f\"meta_analysis_{ave.lower()}.txt\", \"w\") as f:\n",
+    "            f.write(latex_table)\n",
+    "    \n",
+    "    return latex_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_combined_meta_analysis('rw_vaccine_details.xlsx', ave='Symptomatic', save_file=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_combined_meta_analysis('rw_vaccine_details.xlsx', ave='Severe', save_file=False)"
    ]
   }
  ],
